--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "co": "^4.6.0",
     "thunkify": "^2.1.2",
     "vue": "^1.0.26",
+    "vuex": "*",
     "vue-resource": "^0.9.3"
   },
   "devDependencies": {
